--- a/wu1-calculator/css/style.css
+++ b/wu1-calculator/css/style.css
@@ -27,7 +27,7 @@ main {
   color: green;
   text-align: right;
   padding: 10px 4px 10px 4px;
-  border: 1px solid yellow;
+  border: 1px solid pink;
   border-radius: 4px;
   position: relative;
   left: 10%;
