--- a/wu1-calculator/css/style.css
+++ b/wu1-calculator/css/style.css
@@ -30,15 +30,16 @@ main {
 #result {
   height: 10vh;
   width: 80vw;
-  font-size: 5.5rem;
+  font-size: 80px;
   margin-bottom: 10px;
   background-color: black;
   color: green;
   text-align: right;
   padding: 10px 4px 10px 4px;
-  border: 1px solid #FC2296;
+  border: 3px solid #FC2296;
   border-radius: 4px;
   margin: auto;
+  border-radius: 50px;
 }
 
 #keyBoard {
@@ -47,28 +48,35 @@ main {
   grid-auto-rows: calc(82vh/7);
   grid-auto-columns: calc(100%/4);
   grid-gap: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   margin: auto;
   width: 80vw;
   overflow: hidden;
   height: 90vh;
   border: solid;
-  border-radius: 5px;
+  border-radius: 50px;
   border-color: #FC2296;
   background-color: black;
+  margin-top: 10px;
 }
 
 #keyBoard input {
   background-color: #FC2296;
   padding: auto;
+  margin: 5px;
   font-size: 50px;
+  border-radius: 50px;
 
 }
 
-#keyBoard input:hover{opacity: 0.7}
+#keyBoard input:hover{
+  opacity: 0.7;
+  cursor: pointer;
+}
 
-#keyBoard input:active{opacity: 0.3}
+#keyBoard input:active{
+  opacity: 0.3;
+}
 
 @media (max-width: 930px) {
   body {
@@ -99,5 +107,12 @@ main {
   #keyBoard input {
     padding: auto;
     font-size: 20px;
+    margin: -3px;
+    aspect-ratio: 1 / 1;
   }
+
+  #result{
+    font-size: 30px;
+  }
+
 }
