--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,22 @@
 }
 
 html {
+  max-width: 100vw;
+  height: 100vh;
   font-size: 62.5%;
 }
 
 body {
-  height: 100vh;
+  max-height: 100vh;
+  padding: 50px;
+  width: 100vw;
+  display: inline;
 }
 
 main {
-  height: 100vh;
-  width: 100vw;
+  margin: 0;
+  padding: 0;
+  width: 100%;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -29,7 +35,7 @@ main {
 
 #result {
   height: 10vh;
-  width: 80vw;
+  width: 80%;
   font-size: 80px;
   margin-bottom: 10px;
   background-color: black;
@@ -51,10 +57,8 @@ main {
   padding: 10px;
   margin: auto;
   width: 80%;
+  height: auto;
   font-size: 6rem;
-}
-
-#keyBoard {
   border: solid;
   border-radius: 50px;
   border-color: #FC2296;
@@ -62,13 +66,13 @@ main {
   margin-top: 10px;
 }
 
+
 #keyBoard input {
   background-color: #FC2296;
   padding: auto;
   margin: 5px;
   font-size: 50px;
   border-radius: 50px;
-
 }
 
 #keyBoard input:hover{
