--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,9 @@ main {
 
 #keyBoard input {
   background-color: #FC2296;
-  padding: auto;
-  margin: 5px;
-  font-size: 50px;
+  padding: 2px;
+  margin: 2px;
+  font-size: 40px;
   border-radius: 50px;
 }
 
@@ -98,6 +98,7 @@ main {
   #result {
     width: 100vw;
     padding: 0;
+    font-size: 40px;
   }
 
   #keyBoard input {
@@ -111,14 +112,15 @@ main {
   }
 
   #keyBoard input {
-    padding: auto;
+    padding: 2px;
     font-size: 20px;
     margin: -3px;
     aspect-ratio: 1 / 1;
+    width: 9rem;
   }
 
   #result{
-    font-size: 30px;
+    font-size: 35px;
   }
 
 }
