--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ main {
 }
 
 
-#keyBoard input {
+#keyBoard button {
   background-color: #FC2296;
   padding: 2px;
   margin: 2px;
@@ -75,12 +75,12 @@ main {
   border-radius: 50px;
 }
 
-#keyBoard input:hover{
+#keyBoard button:hover{
   opacity: 0.7;
   cursor: pointer;
 }
 
-#keyBoard input:active{
+#keyBoard button:active{
   opacity: 0.3;
 }
 
@@ -101,7 +101,7 @@ main {
     font-size: 40px;
   }
 
-  #keyBoard input {
+  #keyBoard button {
     padding: auto;
     font-size: 25px;
   }
@@ -111,7 +111,7 @@ main {
   main {
   }
 
-  #keyBoard input {
+  #keyBoard button {
     padding: auto;
     font-size: 20px;
     margin: -3px;
